<resources>
    <string name="app_name">Hacking Environment</string>
    <string name="settings">Settings</string>
    <string name="edit_message">ENTER MESSAGE</string>
    <string name="shared_pref_text">SharedPref Test: </string>
    <string name="new_activity_text">New Activity Test: </string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>

    <!-- Buttons -->
    <string name="test_btn">TEST</string>
    <string name="saveto_sharedpref_btn">SAVE PREF</string>
    <string name="getpref_btn">GET PREF</string>
    <string name="getsetting_btn">GET FROM SETTINGS</string>


    <!-- Settings -->
    <string name="settings_title">Preferences</string>

    <string name="sharedpref_settings_key">sharedpref_settings_key</string>
    <string name="sharedpref_settings_summary">choose what displays in sharedpref view</string>
    <string name="sharedpref_settings_title">SHAREDPREF</string>

    <!--asyncparcelable1-->
    <string name="asyncparcelable1_settings_key">asyncparcelable1_settings_key</string>
    <string name="asyncparcelable1_settings_summary">choose how to sort the async w/ parcelable
        gridview (1/2)</string>
    <string name="asyncparcelable1_settings_title">ASYNC W/ PARCELABLE (1/2)</string>

    <!--asyncparcelable2-->
    <string name="asyncparcelable2_settings_key">asyncparcelable2_settings_key</string>
    <string name="asyncparcelable2_settings_summary">choose how to sort the async w/ parcelable
        gridview (2/2)</string>
    <string name="asyncparcelable2_settings_title">ASYNC W/ PARCELABLE (2/2)</string>

    <!--asynccursor1-->
    <string name="asynccursor1_settings_key">asynccursor1_settings_key</string>
    <string name="asynccursor1_settings_summary">choose how to sort the async w/ cursor
        gridview (1/2)</string>
    <string name="asynccursor1_settings_title">ASYNC W/ CURSORADAPTER (1/2)</string>

    <!--asynccursor2-->
    <string name="asynccursor2_settings_key">asynccursor2_settings_key</string>
       <string name="asynccursor2_settings_summary">choose how to sort the async w/ cursor
        gridview (2/2)</string>
    <string name="asynccursor2_settings_title">ASYNC W/ CURSORADAPTER (2/2)</string>

    <!--loader-->
    <string name="loader_settings_key">loader_settings_key</string>
       <string name="loader_settings_summary">choose how to sort the loader
        gridview (2/2)</string>
    <string name="loader_settings_title">Loader Fragment</string>


    <!-- New Activity Test -->
    <string name="launched_activity">This Activity Has Been Launched. Woohoo!</string>

    <!-- SharedPref Test-->
    <string name="preference_file_key">com.example.myapp.PREFERENCE_FILE_KEY</string>
    <string name="preference_key">key</string>
    <string name="saved_default_value">EMPTY</string>

    <!-- Database Test-->
    <string name="sql_test">SQLite Test: </string>
    <string name="insert_btn">INSERT DATA</string>
    <string name="sql_get_data">Get Data</string>
    <string name="delete_data_btn">Delete Data</string>
    <string name="entry_id_title">Entry ID</string>
    <string name="concept_name_title">Concept Name</string>
    <string name="tab_number_title">Tab #</string>
    <string name="update_data_btn">UPDATE DATA</string>

    <!-- Drawer -->
    <string name="drawer_title">Drawer Title</string>
    <string name="navigation_subheader">SUBHEADER</string>
    <string name="toast">TOAST</string>
    <string name="add_fragment">Add Fragment To \'Add Fragment\' Tab</string>
    <string name="new_fragment">Launch New Activity</string>
    <string name="navigate_to_tab">Navigate To Tab</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <!-- Add Fragment Test -->
    <string name="add_fragment_btn">ADD FRAGMENT BELOW</string>

    <!-- New Test -->
    <string name="new_test"> Nuevo Testo </string>

    <!-- AsyncTask-->
    <string name="detail_view"> Detail View</string>
    <string name="about">About This Doodle</string>

    <!-- Static Recycler View -->
    <string name="detail_text">Detail text will be pulled from object and displayed here! It is not
        the critic who counts; not the man who points out how the strong man stumbles, or where the
        doer of deeds could have done them better. The credit belongs to the man who is actually in
        the arena, whose face is marred by dust and sweat and blood; who strives valiantly; who
        errs, who comes short again and again, because there is no effort without error and
        shortcoming; but who does actually strive to do the deeds; who knows great enthusiasms, the
        great devotions; who spends himself in a worthy cause; who at the best knows in the end the
        triumph of high achievement, and who at the worst, if he fails, at least fails while daring
        greatly, so that his place shall never be with those cold and timid souls who neither know
        victory nor defeat.</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">hackingenvironment.example.com</string>
    <string name="content_authority">com.example.adamhurwitz.hackingenvironment</string>

    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification</string>
    <string name="notification_settings_key">notification_key</string>
    <string name="notification_title">Notifications</string>
    <string name="notification_summary">Choose whether to receive notifications</string>
    <string name="notification_default">"true"</string>

</resources>
