<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="Insert text to be shown in SHAREDPREF view"
        android:key="@string/sharedpref_settings_key"
        android:summary="@string/sharedpref_settings_summary"
        android:title="@string/sharedpref_settings_title"></EditTextPreference>
    <ListPreference
        android:defaultValue="popular"
        android:entries="@array/loader_settings_entries"
        android:entryValues="@array/loader_settings_values"
        android:key="@string/loader_settings_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:summary="@string/loader_settings_summary"
        android:title="@string/loader_settings_title"></ListPreference>
    <CheckBoxPreference
        android:defaultValue="@string/notification_default"
        android:key="@string/notification_settings_key"
        android:summary="@string/notification_summary"
        android:title="@string/notification_title" />


</PreferenceScreen>
