<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/toast"
            android:icon="@drawable/and_green"
            android:title="@string/toast"/>
    </group>

    <item android:id="@+id/navigation_subheader2"
        android:title="@string/navigation_subheader">
        <menu>
            <item
                android:id="@+id/add_fragment"
                android:icon="@drawable/and_torq"
                android:title="@string/add_fragment"/>
            <item
                android:id="@+id/launch_activity"
                android:icon="@drawable/and_green"
                android:title="@string/new_fragment"/>
            <item
                android:id="@+id/navigate_to_tab"
                android:icon="@drawable/and_green"
                android:title="@string/navigate_to_tab"/>
        </menu>
    </item>
</menu>