<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="116dp"
    tools:context=".MainActivityFragment">

    <!-- SharedPref Test -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shared_pref_text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_message_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message" />

            <Button
                android:id="@+id/writeToSharedPref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveto_sharedpref_btn" />

            <Button
                android:id="@+id/getFromSharedPref"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getpref_btn" />
        </LinearLayout>

        <Button
            android:id="@+id/getFromSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/getsetting_btn" />

        <TextView
            android:id="@+id/shared_pref_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(SHARED PREF OUTPUT GOES HERE)" />
    </LinearLayout>
</LinearLayout>
